[package]
name = "rust-todo"
version = "0.1.0"

description = "A to-do list CLI tool made in Rust"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["cli", "todo"]
categories = ["command-line-utilities"]
homepage = "https://github.com/yees7/rust-todo"
repository = "https://github.com/yees7/rust-todo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2"
